2004-01-15  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/Makefile.am:
	- Added lm-ssl.[ch]
	* loudmouth/lm-connection.c:
	* loudmouth/lm-connection.h:
	- Splitted out the SSL parts
	- No longer contains loads of #ifdefs around tls parts
	- Added lm_connection_[set|get]_ssl instead.
	* loudmouth/lm-internals.h:
	- Added _lm_ssl*
	* loudmouth/lm-ssl.c:
	* loudmouth/lm-ssl.h:
	- New files, the SSL parts from LmConnection.
	- Declares no-ops for SSL functions if compiled without support for it.
	* loudmouth/test-lm.c:
	- Updated for new SSL API.

2004-01-15  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c:
	- Added Sjoerd Simons to copyright list.

2004-01-15  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/Makefile.am:
	- Added lm-proxy.[ch]
	* loudmouth/lm-connection.c:
	* loudmouth/lm-connection.h:
	- Commited patch from Sjoerd Simons to make async connect work better.
	- Cleaned out the proxy support to it's own file.
	- Made sure all public functions user g_return_(val)_if_fail.
	* loudmouth/lm-internals.h:
	- cleaned up a bit and added proxy function and base64 encoding
	* loudmouth/lm-message-handler.c:
	- include config.h
	* loudmouth/lm-proxy.c:
	* loudmouth/lm-proxy.h:
	- Added, broken out of LmConnection
	- Commited patch from Josh Beam
	* loudmouth/lm-utils.c:
	(_lm_utils_base64_encode): Added.

2004-01-08  Richard Hult  <richard@imendio.com>

	* loudmouth/lm-connection.c (connection_timeout_check_open):
	Remove debug output.

	* acinclude.m4: Add gmtoff check.

	* loudmouth/lm-utils.c (lm_utils_get_localtime): Use tm_gmtoff if
	available.

2004-01-06  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c:
	- Now works with sync open again.
	* loudmouth/lm-utils.c: (_lm_utils_free_callback):
	- Work with NULL

2004-01-05  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: 
	- Work in progress of making the lm_connection_open really async.
	- Currently broken for lm_connection_open_block.
